chore(style): optimize

--- a/apps/ride/index.html
+++ b/apps/ride/index.html
@@ -144,7 +144,7 @@
                   </svg></div>
               </a>
             </div>
-            <p class="paragraph">Own &amp; <span class="high-light">earn</span> from every <span
+            <p class="paragraph">Own &amp; <span class="high-light">earn</span><br> from every <span
                 class="high-light">ride</span></p>
             <div class="text-block-3">Get paid for every ride with AiGO Ride</div>
             <div class="cta-group"><a data-w-id="b0b91de7-961d-4d72-650a-76139644fcea" href="#"
@@ -768,10 +768,10 @@
           <img class="backers-logo animoca" src="img/backers/animoca.png" alt="Animoca">
         </div>
         <div class="backers-logo-container">
-          <img class="backers-logo ticker-img" src="img/backers/ticker-img.png" alt="Ticker">
+          <img class="backers-logo ticker-img" src="img/backers/ticker-img2.png" alt="Ticker">
         </div>
         <div class="backers-logo-container">
-          <img class="backers-logo waterdrip" src="img/backers/waterdrip.png" alt="WaterDrip">
+          <img class="backers-logo waterdrip" src="img/backers/waterdrip_2.png" alt="WaterDrip">
         </div>
         <div class="backers-logo-container">
           <img class="backers-logo k300" src="img/backers/k300.svg" alt="K300">
@@ -789,7 +789,7 @@
           <img class="backers-logo cryptomind" src="img/backers/cryptomind.svg" alt="CryptoMind">
         </div>
         <div class="backers-logo-container">
-          <img class="backers-logo tada-img" src="img/backers/tada-img.png" alt="Tada">
+          <img class="backers-logo tada-img" src="img/backers/tada-img2.png" alt="Tada">
         </div>
         <div class="backers-logo-container">
           <img class="backers-logo mvl-img" src="img/backers/mvl-img.png" alt="MVL">
