chore(og): change og image

--- a/apps/ride/index.html
+++ b/apps/ride/index.html
@@ -18,12 +18,12 @@
   <meta
     content="A gamified social app allows motorcycle, e-bike, and two-wheeler riders to own, and safely share movement data with AiGO Network. Turning every ride into earning passive income and discovering new places."
     property="og:description">
-  <meta content="https://aigo-network.s3.ap-south-1.amazonaws.com/ride/OG-image.png" property="og:image">
+  <meta content="img/og.png" property="og:image">
   <meta content="AiGO Ride - Get paid for every ride" property="twitter:title">
   <meta
     content="A gamified social app allows motorcycle, e-bike, and two-wheeler riders to own, and safely share movement data with AiGO Network. Turning every ride into earning passive income and discovering new places."
     property="twitter:description">
-  <meta content="https://aigo-network.s3.ap-south-1.amazonaws.com/ride/OG-image.png" property="twitter:image">
+  <meta content="img/og.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
