chore(webflow): delete webflow logo

--- a/apps/ride/index.html
+++ b/apps/ride/index.html
@@ -8,6 +8,10 @@
     .wf-force-outline-none[tabindex="-1"]:focus {
       outline: none;
     }
+
+    a.w-webflow-badge {
+      display: none !important;
+    }
   </style>
   <meta charset="utf-8">
   <title>AiGO Ride - Get paid for every ride</title>
@@ -1109,10 +1113,7 @@
     }, { root: null, rootMargin: "20px", threshold: [0] })
 
     observer.observe(aboutSection)
-  </script><a class="w-webflow-badge" href="https://webflow.com?utm_campaign=brandjs"><img
-      src="https://d3e54v103j8qbb.cloudfront.net/img/webflow-badge-icon-d2.89e12c322e.svg" alt=""
-      style="margin-right: 4px; width: 26px;"><img
-      src="https://d3e54v103j8qbb.cloudfront.net/img/webflow-badge-text-d2.c82cec3b78.svg" alt="Made in Webflow"></a>
+  </script>
 </body>
 
 </html>
