chore(supporting): del animoca and nnbox

--- a/apps/ride/index.html
+++ b/apps/ride/index.html
@@ -768,9 +768,9 @@
     </div>
     <div id="supporting-partners" class="supporting-partners-content-container">
       <div class="supporting-partners-logo-container">
-        <div class="backers-logo-container">
+        <!-- <div class="backers-logo-container">
           <img class="backers-logo animoca" src="img/backers/animoca.png" alt="Animoca">
-        </div>
+        </div> -->
         <div class="backers-logo-container">
           <img class="backers-logo ticker-img" src="img/backers/ticker-img2.png" alt="Ticker">
         </div>
@@ -783,9 +783,9 @@
         <div class="backers-logo-container">
           <img class="backers-logo capital-chain" src="img/backers/capital-chain.svg" alt="Capital Chain">
         </div>
-        <div class="backers-logo-container">
+        <!-- <div class="backers-logo-container">
           <img class="backers-logo nnbox" src="img/backers/nnbox.png" alt="NNBox">
-        </div>
+        </div> -->
         <div class="backers-logo-container">
           <img class="backers-logo iotex" src="img/backers/iotex.svg" alt="IoTeX">
         </div>
